--- a/schelettrunchistyle.css
+++ b/schelettrunchistyle.css
@@ -188,7 +188,7 @@ body {
             font-size: 2.2rem;
             margin: 0;
             text-align: center;
-            color: white*;
+            color: white;
         }
         
         .section-content {
