--- a/uitatparola.css
+++ b/uitatparola.css
@@ -206,3 +206,147 @@ p{
   transform: scale(1.1); 
   color: #0037FF; 
 }
+@media screen and (max-width: 1024px) {
+  .container {
+    width: 50%;
+    left: 25%;
+    top: 10%;
+    height: 65vh;
+  }
+
+  .email {
+    font-size: 1.3rem;
+    padding: 30px;
+  }
+
+  .head h1 {
+    font-size: 2.5rem;
+    margin-top: 60px;
+  }
+
+  p {
+    font-size: 1.1rem;
+    margin-left: 5%;
+    max-width: 350px;
+  }
+
+  .user {
+    width: 12vh;
+    height: 12vh;
+    right: 42%;
+    bottom: 87%;
+  }
+
+  .login {
+    width: 70%;
+    margin-left: 15%;
+    font-size: 1.1rem;
+  }
+
+  .container h2 {
+    left: 25%;
+    width: 50%;
+  }
+}
+
+/* Mobile Phone Styles (for screens less than 768px) */
+@media screen and (max-width: 767px) {
+  .container {
+    width: 90%;
+    left: 5%;
+    top: 8%;
+    height: 70vh;
+  }
+
+  .user {
+    width: 10vh;
+    height: 10vh;
+    right: 45%;
+    bottom: 90%;
+  }
+
+  .head h1 {
+    font-size: 2rem;
+    margin-top: 50px;
+  }
+
+  p {
+    font-size: 1rem;
+    margin-left: 5%;
+    max-width: 300px;
+  }
+
+  .email {
+    width: 90%;
+    font-size: 1.1rem;
+    padding: 25px;
+    margin: 25px auto;
+    height: 4vh;
+  }
+
+  .login {
+    width: 80%;
+    margin-left: 10%;
+    height: 6vh;
+    font-size: 1rem;
+  }
+
+  .info {
+    margin-top: 30px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .message1, .message2 {
+    font-size: 0.9rem;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+
+  .container h2 {
+    left: 20%;
+    width: 60%;
+    font-size: 1rem;
+    bottom: 5%;
+  }
+}
+
+/* Small Phone Styles (for screens less than 400px) */
+@media screen and (max-width: 400px) {
+  .container {
+    height: 75vh;
+  }
+
+  .user {
+    width: 8vh;
+    height: 8vh;
+  }
+
+  .head h1 {
+    font-size: 1.6rem;
+    margin-top: 40px;
+  }
+  
+  p {
+    font-size: 0.9rem;
+    max-width: 250px;
+  }
+  
+  .email {
+    padding: 20px;
+    height: 3vh;
+    font-size: 1rem;
+  }
+  
+  .login {
+    height: 5vh;
+  }
+
+  .container h2 {
+    font-size: 0.9rem;
+  }
+
+  .info {
+    margin-top: 20px;
+  }
+}
